[gd_scene load_steps=4 format=3 uid="uid://b6xyc4l5qf53e"]

[ext_resource type="PackedScene" uid="uid://nb0labmal7p1" path="res://content/src/menus/@widgets/nav_button/nav_button.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dw0wchmhnh8bu" path="res://content/src/menus/@widgets/nav_bar/v_nav_bar.tscn" id="2"]
[ext_resource type="Script" path="res://content/src/menus/@widgets/nav_bar/sub_nav/sub_nav.gd" id="3"]

[node name="SubNav" type="PanelContainer" groups=["subNav"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("3")

[node name="VNavBar" parent="." instance=ExtResource("2")]
layout_mode = 2
ButtonScene = ExtResource("1")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
